--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>##SITE_NAME##</title>
+<meta name="google-site-verification" content="DpA1xTkGC1v2AOAK5-YdK8o0soezUFD2WRc-CnDu81I" />
+    <title>Project 002</title>
 </head>
 <body>
 
